# RKNNtest

./: .gitignore  CMakeLists.txt  README.md  gen_test_img.cpp  test.cpp
compat/: RgaUtils.h  compat.h  dirent.h  im2d.h  rga.h  rknn_api.h
libs/aarch64/lib/: libdrm.so.2.4.0  librga.so.2.1.0
